--- a/phonebook-architectural-decision-record.html
+++ b/phonebook-architectural-decision-record.html
@@ -69,14 +69,14 @@
     <link rel="alternate" type="application/rss+xml" title="transparencia_estudos" href="/series-transparencia-estudos.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: projetos" href="/tag-projetos.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: python" href="/tag-python.rss">
-    <link rel="alternate" type="application/rss+xml" title="tag: adr" href="/tag-adr.rss">
-    <link rel="alternate" type="application/rss+xml" title="tag: oop" href="/tag-oop.rss">
-    <link rel="alternate" type="application/rss+xml" title="tag: diarios" href="/tag-diarios.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: back-end" href="/tag-back-end.rss">
-    <link rel="alternate" type="application/rss+xml" title="tag: uff" href="/tag-uff.rss">
+    <link rel="alternate" type="application/rss+xml" title="tag: diarios" href="/tag-diarios.rss">
+    <link rel="alternate" type="application/rss+xml" title="tag: oop" href="/tag-oop.rss">
+    <link rel="alternate" type="application/rss+xml" title="tag: adr" href="/tag-adr.rss">
+    <link rel="alternate" type="application/rss+xml" title="tag: transparencia" href="/tag-transparencia.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: platform-engineering" href="/tag-platform-engineering.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: devops" href="/tag-devops.rss">
-    <link rel="alternate" type="application/rss+xml" title="tag: transparencia" href="/tag-transparencia.rss">
+    <link rel="alternate" type="application/rss+xml" title="tag: uff" href="/tag-uff.rss">
     <link rel="alternate" type="application/rss+xml" title="tag: data-engineering" href="/tag-data-engineering.rss">
     <link rel="alternate" type="application/rss+xml" title="author: kobamaru" href="/author-kobamaru.rss">
     <link rel="alternate" type="application/rss+xml" title="year: 2025" href="/archive-2025.rss">
@@ -244,9 +244,9 @@
 <li>Criar funcionalidade para editar um contato existente.</li>
 <li>Implementar opção para marcar/desmarcar um contato como favorito.</li>
 <li>Desenvolver visualização da lista de contatos favoritos.</li>
-<li>Criar funcionalidade para apagar um contato.
-Porém, <strong>como todo programador metido a besta</strong>, eu precisava que a complexidade fosse elevada - a &quot;régua metafórica&quot;, o &quot;sarrafo metafórico&quot;, precisava subir - A implementação então passaria a ser uma <em><strong>CLI</strong></em>, Command-Line Interface, <strong>voltada a realizar o gerenciamento de uma Lista de Contatos primeiro utilizando um arquivo <code>.json</code> local, depois uma instância de Banco de Dados SQLite.</strong> <strong>Curto e grosso:</strong> Estamos construindo um <code>CRUD</code>.</li>
+<li>Criar funcionalidade para apagar um contato.</li>
 </ul>
+<p>Porém, <strong>como todo programador metido a besta</strong>, eu precisava que a complexidade fosse elevada - a &quot;régua metafórica&quot;, o &quot;sarrafo metafórico&quot;, precisava subir - A implementação então passaria a ser uma <em><strong>CLI</strong></em>, Command-Line Interface, <strong>voltada a realizar o gerenciamento de uma Lista de Contatos primeiro utilizando um arquivo <code>.json</code> local, depois uma instância de Banco de Dados SQLite.</strong> <strong>Curto e grosso:</strong> Estamos construindo um <code>CRUD</code>.</p>
 <h2><a href="#implementação-inicial-classes--métodos" aria-hidden="true" class="anchor" id="implementação-inicial-classes--métodos"></a>Implementação Inicial: Classes &amp; Métodos</h2>
 <hr />
 <p>Contextualizando: Toda Lista Telefônica contém Contatos... A Lista em si é uma Classe, e os Contatos contidos nela também, cada uma com seus métodos e atributos:</p>
